# Memorii

./: .env.example  .gitignore  LICENSE  README.md  agents.md
memorii/: pyproject.toml
memorii/memorii/: __init__.py
memorii/memorii/adapters/: __init__.py  cli_adapter.py  contracts.py  events.py  generic_json_adapter.py
memorii/memorii/api/: __init__.py  models.py  service.py
memorii/memorii/core/: __init__.py  llm_config.py
memorii/memorii/core/belief/: __init__.py  hybrid_provider.py  llm_provider.py  models.py  provider.py  rule_provider.py
memorii/memorii/core/benchmark/: __init__.py  baselines.py  fixtures.py  harness.py  hotpotqa.py  metrics.py  models.py  multilingual_tokenization.py  reporting.py  reproducibility.py  scenarios.py  text_normalization.py  validation.py
memorii/memorii/core/consolidation/: __init__.py  consolidator.py  policies.py
memorii/memorii/domain/: __init__.py  common.py  directory.py  enums.py  events.py  ids.py  memory_object.py  retrieval.py  routing.py  writebacks.py
memorii/memorii/integrations/: __init__.py  hermes_provider.py  provider_interface.py
memorii/memorii/stores/: __init__.py
memorii/memorii/tools/: __init__.py  run_live_llm_eval.py
memorii/prompts/belief_update/: v1.yaml
memorii/prompts/promotion_decision/: v1.yaml
memorii/tests/: __init__.py
memorii/tests/integration/: test_openai_live_structured.py  test_phase6_harness_integration.py
memorii/tests/unit/: __init__.py  test_enums_and_ids.py  test_execution_solver_event_schemas.py  test_memory_object_schema.py  test_store_interfaces.py
(+228 files in other folders)
