[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorii"
version = "0.1.0"
description = "Memorii framework-neutral memory plane"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "PyICU>=2.13",
  "scikit-learn>=1.5,<2",
  "PyYAML>=6.0,<7",
  "jsonschema>=4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["memorii*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
